src/ImguiSdlSharp/Native.cs


        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_GetAllocatorFunctions(ImGuiMemAllocFunc* p_alloc_func, ImGuiMemFreeFunc* p_free_func, void** p_user_data);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void* ImGui_MemAlloc(nuint size);

        [DllImport(ImguiLibrary, CallingConvention = CallingConvention.Cdecl)]
        public static extern void ImGui_MemFree(void* ptr);

        #endregion

        #region Enumerated types

        public enum ImGuiWindowFlags
        {
            ImGuiWindowFlags_None = 0,
            ImGuiWindowFlags_NoTitleBar = 1 << 0,
            ImGuiWindowFlags_NoResize = 1 << 1,
            ImGuiWindowFlags_NoMove = 1 << 2,
            ImGuiWindowFlags_NoScrollbar = 1 << 3,
            ImGuiWindowFlags_NoScrollWithMouse = 1 << 4,
            ImGuiWindowFlags_NoCollapse = 1 << 5,
            ImGuiWindowFlags_AlwaysAutoResize = 1 << 6,
            ImGuiWindowFlags_NoBackground = 1 << 7,
            ImGuiWindowFlags_NoSavedSettings = 1 << 8,
            ImGuiWindowFlags_NoMouseInputs = 1 << 9,
            ImGuiWindowFlags_MenuBar = 1 << 10,
            ImGuiWindowFlags_HorizontalScrollbar = 1 << 11,
            ImGuiWindowFlags_NoFocusOnAppearing = 1 << 12,
            ImGuiWindowFlags_NoBringToFrontOnFocus = 1 << 13,
            ImGuiWindowFlags_AlwaysVerticalScrollbar = 1 << 14,
            ImGuiWindowFlags_AlwaysHorizontalScrollbar = 1 << 15,
            ImGuiWindowFlags_AlwaysUseWindowPadding = 1 << 16,
            ImGuiWindowFlags_NoNavInputs = 1 << 18,
            ImGuiWindowFlags_NoNavFocus = 1 << 19,
            ImGuiWindowFlags_UnsavedDocument = 1 << 20,
            ImGuiWindowFlags_NoNav = ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,
            ImGuiWindowFlags_NoDecoration = ImGuiWindowFlags_NoTitleBar | ImGuiWindowFlags_NoResize | ImGuiWindowFlags_NoScrollbar | ImGuiWindowFlags_NoCollapse,
            ImGuiWindowFlags_NoInputs = ImGuiWindowFlags_NoMouseInputs | ImGuiWindowFlags_NoNavInputs | ImGuiWindowFlags_NoNavFocus,

            ImGuiWindowFlags_NavFlattened = 1 << 23,
            ImGuiWindowFlags_ChildWindow = 1 << 24,
            ImGuiWindowFlags_Tooltip = 1 << 25,
            ImGuiWindowFlags_Popup = 1 << 26,
            ImGuiWindowFlags_Modal = 1 << 27,
            ImGuiWindowFlags_ChildMenu = 1 << 28,
        }

        public enum ImGuiInputTextFlags
        {
            ImGuiInputTextFlags_None = 0,
            ImGuiInputTextFlags_CharsDecimal = 1 << 0,
            ImGuiInputTextFlags_CharsHexadecimal = 1 << 1,
            ImGuiInputTextFlags_CharsUppercase = 1 << 2,
            ImGuiInputTextFlags_CharsNoBlank = 1 << 3,
            ImGuiInputTextFlags_AutoSelectAll = 1 << 4,
            ImGuiInputTextFlags_EnterReturnsTrue = 1 << 5,
            ImGuiInputTextFlags_CallbackCompletion = 1 << 6,
            ImGuiInputTextFlags_CallbackHistory = 1 << 7,
            ImGuiInputTextFlags_CallbackAlways = 1 << 8,
            ImGuiInputTextFlags_CallbackCharFilter = 1 << 9,
            ImGuiInputTextFlags_AllowTabInput = 1 << 10,
            ImGuiInputTextFlags_CtrlEnterForNewLine = 1 << 11,
            ImGuiInputTextFlags_NoHorizontalScroll = 1 << 12,
            ImGuiInputTextFlags_AlwaysOverwrite = 1 << 13,
            ImGuiInputTextFlags_ReadOnly = 1 << 14,
            ImGuiInputTextFlags_Password = 1 << 15,
            ImGuiInputTextFlags_NoUndoRedo = 1 << 16,
            ImGuiInputTextFlags_CharsScientific = 1 << 17,
            ImGuiInputTextFlags_CallbackResize = 1 << 18,
            ImGuiInputTextFlags_CallbackEdit = 1 << 19,
            ImGuiInputTextFlags_EscapeClearsAll = 1 << 20,

        }

        public enum ImGuiTreeNodeFlags
        {
            ImGuiTreeNodeFlags_None = 0,
            ImGuiTreeNodeFlags_Selected = 1 << 0,
            ImGuiTreeNodeFlags_Framed = 1 << 1,
            ImGuiTreeNodeFlags_AllowItemOverlap = 1 << 2,
            ImGuiTreeNodeFlags_NoTreePushOnOpen = 1 << 3,
            ImGuiTreeNodeFlags_NoAutoOpenOnLog = 1 << 4,
            ImGuiTreeNodeFlags_DefaultOpen = 1 << 5,
            ImGuiTreeNodeFlags_OpenOnDoubleClick = 1 << 6,
            ImGuiTreeNodeFlags_OpenOnArrow = 1 << 7,
            ImGuiTreeNodeFlags_Leaf = 1 << 8,
            ImGuiTreeNodeFlags_Bullet = 1 << 9,
            ImGuiTreeNodeFlags_FramePadding = 1 << 10,
            ImGuiTreeNodeFlags_SpanAvailWidth = 1 << 11,
            ImGuiTreeNodeFlags_SpanFullWidth = 1 << 12,
            ImGuiTreeNodeFlags_NavLeftJumpsBackHere = 1 << 13,

            ImGuiTreeNodeFlags_CollapsingHeader = ImGuiTreeNodeFlags_Framed | ImGuiTreeNodeFlags_NoTreePushOnOpen | ImGuiTreeNodeFlags_NoAutoOpenOnLog,
        }

        public enum ImGuiPopupFlags
        {
            ImGuiPopupFlags_None = 0,
            ImGuiPopupFlags_MouseButtonLeft = 0,
            ImGuiPopupFlags_MouseButtonRight = 1,
            ImGuiPopupFlags_MouseButtonMiddle = 2,
            ImGuiPopupFlags_MouseButtonMask_ = 0x1F,
            ImGuiPopupFlags_MouseButtonDefault_ = 1,
            ImGuiPopupFlags_NoOpenOverExistingPopup = 1 << 5,
            ImGuiPopupFlags_NoOpenOverItems = 1 << 6,
            ImGuiPopupFlags_AnyPopupId = 1 << 7,
            ImGuiPopupFlags_AnyPopupLevel = 1 << 8,
            ImGuiPopupFlags_AnyPopup = ImGuiPopupFlags_AnyPopupId | ImGuiPopupFlags_AnyPopupLevel,
        }

        public enum ImGuiSelectableFlags
        {
            ImGuiSelectableFlags_None = 0,
            ImGuiSelectableFlags_DontClosePopups = 1 << 0,
            ImGuiSelectableFlags_SpanAllColumns = 1 << 1,
            ImGuiSelectableFlags_AllowDoubleClick = 1 << 2,
            ImGuiSelectableFlags_Disabled = 1 << 3,
            ImGuiSelectableFlags_AllowItemOverlap = 1 << 4,
        }

        public enum ImGuiComboFlags
        {
            ImGuiComboFlags_None = 0,
            ImGuiComboFlags_PopupAlignLeft = 1 << 0,
            ImGuiComboFlags_HeightSmall = 1 << 1,
            ImGuiComboFlags_HeightRegular = 1 << 2,
            ImGuiComboFlags_HeightLarge = 1 << 3,
            ImGuiComboFlags_HeightLargest = 1 << 4,
            ImGuiComboFlags_NoArrowButton = 1 << 5,
            ImGuiComboFlags_NoPreview = 1 << 6,
            ImGuiComboFlags_HeightMask_ = ImGuiComboFlags_HeightSmall | ImGuiComboFlags_HeightRegular | ImGuiComboFlags_HeightLarge | ImGuiComboFlags_HeightLargest,
        }

        public enum ImGuiTabBarFlags
        {
            ImGuiTabBarFlags_None = 0,
            ImGuiTabBarFlags_Reorderable = 1 << 0,
            ImGuiTabBarFlags_AutoSelectNewTabs = 1 << 1,
            ImGuiTabBarFlags_TabListPopupButton = 1 << 2,
            ImGuiTabBarFlags_NoCloseWithMiddleMouseButton = 1 << 3,
            ImGuiTabBarFlags_NoTabListScrollingButtons = 1 << 4,
            ImGuiTabBarFlags_NoTooltip = 1 << 5,
            ImGuiTabBarFlags_FittingPolicyResizeDown = 1 << 6,
            ImGuiTabBarFlags_FittingPolicyScroll = 1 << 7,
            ImGuiTabBarFlags_FittingPolicyMask_ = ImGuiTabBarFlags_FittingPolicyResizeDown | ImGuiTabBarFlags_FittingPolicyScroll,
            ImGuiTabBarFlags_FittingPolicyDefault_ = ImGuiTabBarFlags_FittingPolicyResizeDown,
        }

        public enum ImGuiTabItemFlags
        {
            ImGuiTabItemFlags_None = 0,
            ImGuiTabItemFlags_UnsavedDocument = 1 << 0,
            ImGuiTabItemFlags_SetSelected = 1 << 1,
            ImGuiTabItemFlags_NoCloseWithMiddleMouseButton = 1 << 2,
            ImGuiTabItemFlags_NoPushId = 1 << 3,
            ImGuiTabItemFlags_NoTooltip = 1 << 4,
            ImGuiTabItemFlags_NoReorder = 1 << 5,
            ImGuiTabItemFlags_Leading = 1 << 6,
            ImGuiTabItemFlags_Trailing = 1 << 7,
        }

        public enum ImGuiTableFlags
        {

            ImGuiTableFlags_None = 0,
            ImGuiTableFlags_Resizable = 1 << 0,
            ImGuiTableFlags_Reorderable = 1 << 1,
            ImGuiTableFlags_Hideable = 1 << 2,
            ImGuiTableFlags_Sortable = 1 << 3,
            ImGuiTableFlags_NoSavedSettings = 1 << 4,
            ImGuiTableFlags_ContextMenuInBody = 1 << 5,

            ImGuiTableFlags_RowBg = 1 << 6,
            ImGuiTableFlags_BordersInnerH = 1 << 7,
            ImGuiTableFlags_BordersOuterH = 1 << 8,
            ImGuiTableFlags_BordersInnerV = 1 << 9,
            ImGuiTableFlags_BordersOuterV = 1 << 10,
            ImGuiTableFlags_BordersH = ImGuiTableFlags_BordersInnerH | ImGuiTableFlags_BordersOuterH,
            ImGuiTableFlags_BordersV = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersOuterV,
            ImGuiTableFlags_BordersInner = ImGuiTableFlags_BordersInnerV | ImGuiTableFlags_BordersInnerH,
            ImGuiTableFlags_BordersOuter = ImGuiTableFlags_BordersOuterV | ImGuiTableFlags_BordersOuterH,
            ImGuiTableFlags_Borders = ImGuiTableFlags_BordersInner | ImGuiTableFlags_BordersOuter,
            ImGuiTableFlags_NoBordersInBody = 1 << 11,
            ImGuiTableFlags_NoBordersInBodyUntilResize = 1 << 12,

            ImGuiTableFlags_SizingFixedFit = 1 << 13,
            ImGuiTableFlags_SizingFixedSame = 2 << 13,
            ImGuiTableFlags_SizingStretchProp = 3 << 13,
            ImGuiTableFlags_SizingStretchSame = 4 << 13,

            ImGuiTableFlags_NoHostExtendX = 1 << 16,
            ImGuiTableFlags_NoHostExtendY = 1 << 17,
            ImGuiTableFlags_NoKeepColumnsVisible = 1 << 18,
            ImGuiTableFlags_PreciseWidths = 1 << 19,

            ImGuiTableFlags_NoClip = 1 << 20,

            ImGuiTableFlags_PadOuterX = 1 << 21,
            ImGuiTableFlags_NoPadOuterX = 1 << 22,
            ImGuiTableFlags_NoPadInnerX = 1 << 23,

            ImGuiTableFlags_ScrollX = 1 << 24,
            ImGuiTableFlags_ScrollY = 1 << 25,

            ImGuiTableFlags_SortMulti = 1 << 26,
            ImGuiTableFlags_SortTristate = 1 << 27,


            ImGuiTableFlags_SizingMask_ = ImGuiTableFlags_SizingFixedFit | ImGuiTableFlags_SizingFixedSame | ImGuiTableFlags_SizingStretchProp | ImGuiTableFlags_SizingStretchSame,
        }

        public enum ImGuiTableColumnFlags
        {
            ImGuiTableColumnFlags_None = 0,
            ImGuiTableColumnFlags_Disabled = 1 << 0,
            ImGuiTableColumnFlags_DefaultHide = 1 << 1,
            ImGuiTableColumnFlags_DefaultSort = 1 << 2,
            ImGuiTableColumnFlags_WidthStretch = 1 << 3,
            ImGuiTableColumnFlags_WidthFixed = 1 << 4,
            ImGuiTableColumnFlags_NoResize = 1 << 5,
            ImGuiTableColumnFlags_NoReorder = 1 << 6,
            ImGuiTableColumnFlags_NoHide = 1 << 7,
            ImGuiTableColumnFlags_NoClip = 1 << 8,
            ImGuiTableColumnFlags_NoSort = 1 << 9,
            ImGuiTableColumnFlags_NoSortAscending = 1 << 10,
            ImGuiTableColumnFlags_NoSortDescending = 1 << 11,
            ImGuiTableColumnFlags_NoHeaderLabel = 1 << 12,
            ImGuiTableColumnFlags_NoHeaderWidth = 1 << 13,
            ImGuiTableColumnFlags_PreferSortAscending = 1 << 14,
            ImGuiTableColumnFlags_PreferSortDescending = 1 << 15,
            ImGuiTableColumnFlags_IndentEnable = 1 << 16,
            ImGuiTableColumnFlags_IndentDisable = 1 << 17,


            ImGuiTableColumnFlags_IsEnabled = 1 << 24,
            ImGuiTableColumnFlags_IsVisible = 1 << 25,
            ImGuiTableColumnFlags_IsSorted = 1 << 26,
            ImGuiTableColumnFlags_IsHovered = 1 << 27,


            ImGuiTableColumnFlags_WidthMask_ = ImGuiTableColumnFlags_WidthStretch | ImGuiTableColumnFlags_WidthFixed,
            ImGuiTableColumnFlags_IndentMask_ = ImGuiTableColumnFlags_IndentEnable | ImGuiTableColumnFlags_IndentDisable,
            ImGuiTableColumnFlags_StatusMask_ = ImGuiTableColumnFlags_IsEnabled | ImGuiTableColumnFlags_IsVisible | ImGuiTableColumnFlags_IsSorted | ImGuiTableColumnFlags_IsHovered,
            ImGuiTableColumnFlags_NoDirectResize_ = 1 << 30,
        }
